@@ -37,6 +37,7 @@ DIST ccpn-update-2.3.1-130930.patch.xz 3540 SHA256 311cbf0e3bbb77b68ae77fe2f7092
 DIST ccpn-update-2.3.1-131008.patch.xz 4980 SHA256 f52ee972d459f6f3169b24b2858b1e912c950ebcd57905bbb1633e54dbf00a4e SHA512 12db64c4f03e5f14f1998fd713459f1d7ffc7355c2ac2cdcc8d5b48a46b59956f6ec6bc0b9f37c785c70630b3736886c9b8818612563d73840699e976a65cd9a WHIRLPOOL be9bde47b0373cf463d94720d9f8b342f12cf6afe57c07f1d6a541beb3decb604eddbaac886d23b9eb4806d8bf049e6d1fde4ba2caff19fdc27b1dcb347818f2
 DIST ccpn-update-2.3.1-131010.patch.xz 7352 SHA256 f447df5334aac40847c9796421b5af8c4d290355b8f4a7de67ea6735683efca4 SHA512 865f3c39398f0c55a1f219d816c5a0395e9c7fa71b6f145c05959c39a4971c451f7162e9d23e5e0b000e0a2f7754bac6d458875b897bf3c3d4ed9a72f80a5561 WHIRLPOOL 60616ccaf6bdd2cabf6bf23813a761e00d8dca31ecb0e8d34c8a7ddc2983c8643a12392ccd7e1b5c356cc40456df9140801b842bc7170fa311c273cc5ed762db
 DIST ccpn-update-2.3.1-131015.patch.xz 7676 SHA256 df46e2f39ff6a9feda6bd9d4480d94af0f0282e318f6e3e27fc3d5b6ee1888db SHA512 c1ba9a0b9766a5317564978159a7e7c3176d382ff0e5d4547a372666309c614079254e772921761010e23ce61a81b1cdf4f99b3b58880ab9901ab372adea1055 WHIRLPOOL 4d008ac4c4861083091c557485afe0efd9dcfd982f1c241987743cb494f36ab084b27449cf2e528c2b95e2048dc67e90e58a4e0e3de283b81e17478b6900cff9
+DIST ccpn-update-2.3.1-131018.patch.xz 8152 SHA256 03d51dd46b68b426dce8dcdc479add7a3c865c98da1528854538422ebfb93952 SHA512 cf396501bdabca724cf691cb35a7acaafc5b7253f15eaf6c286a52afbf629b1babadd837facbafe50d9a960699647640ffc009ae58da4cd1c288b752ce8a96fc WHIRLPOOL dbb69d3df269cd569939783963243496552b3ea551a5e7e4362d2815aad533142a884183ca1bed3af4c54933eb03e835cc9b46662dc8021705507eeabbb6b2d3
 EBUILD ccpn-2.1.3.1_p100806.ebuild 5181 SHA256 c3ba268461da63ea23ee7f621a8e4837a368eb3e4c85bcc5245250fb6b377b58 SHA512 701ea90a13dc44e5bf1ea17c0f69adea56b1c14788ab79c67fa4b9726cae532998717515568045aec9bb4e1dd4c352227130115d90c50bf07e7fd132cdee385d WHIRLPOOL 898a618f95b254785739e6fab20af333cb3a44bff12cd6840d1b111f1588a60e48055e8af7ca88457173452f6acba86ebd3bada96390211bc4cd063fe4160fd5
 EBUILD ccpn-2.2.2_p121125.ebuild 4612 SHA256 08a4b0682c049a6301138ea6f24d665edb0a8d8d709ed2c2f2529aa0a5e648a1 SHA512 f8c45f0b19a721775dab3147cced933e8db969e8443c15cd2bd2a31ffc3fcd0eda95acc75a93df5d0dd51dabd80fde8311a7b02bf3f6a051bc0855cb156755a5 WHIRLPOOL 427cacc0c080197cc79a867f1cf1d5bed45cbfbb0f8c5dc6456548218895ff25023ea30090e751af78b77fffd47f87f7aac3869a8ed13aa3727f2f12bac743b1
 EBUILD ccpn-2.2.2_p130110.ebuild 4649 SHA256 53125900943ea89ba3d3483de29a240a0e7282098af869a04bc926c34f3bf51f SHA512 8406a93562897aadfefd03e098b393af5fb29f9bfde8e5727b73ceb6cbe004b73cfd97b61e942189d9fba717761b20cc4914e5c9d858f36bbdbdeea1369490e7 WHIRLPOOL 112e9cab77898ef9246b127d5ef8529948cfaf91157a25bbe39899560af8340f8e5cbd1e2a3935dae083a9291f0d569d3cc5b7588dc2029f3342ecbe5590cb0f
@@ -56,22 +57,23 @@ EBUILD ccpn-2.3.1_p130930.ebuild 4685 SHA256 e1a004b4a163e0268943618080b315b39be
 EBUILD ccpn-2.3.1_p131008.ebuild 4685 SHA256 ae08a4a528ecc7828b6e176fed7ebe967352c3fbe6306e12348e3504b0e37f4c SHA512 a14bcb3596fdd130b5f8986d50983381f61289aab7c81f9a3619359836b7fb27008957dcfc1bb6d0f0322b3858291e5d107c5974e09031a022e124a4db990b0c WHIRLPOOL 6ec92ea8ef6ebf990880f800ce9e633fa44d9339c88d746db2665555117497377ab4c0b717732f26237c04905856ea47fbac37fb75f90fe9ede41b2fc7be268b
 EBUILD ccpn-2.3.1_p131010.ebuild 4685 SHA256 8d98fd88b576a617f7b55d9b0de3ee5441828545e54baebaca1dc2914e188199 SHA512 400ca5f0efa2e5865544f0ca7a810fa3d1825b693b194cd5b58c84dff028c1aa8678c06c6f17a0f1cbfad4eb852c4d102429fba04803fae825e10522849866c4 WHIRLPOOL 5b9da2f81b0909037385988096f37937243a4110b752850c8f6505f06b372a4ce55534ae1a896f86040a17601a293c6caad765924efcd5f6d34236a3b0a851f4
 EBUILD ccpn-2.3.1_p131015.ebuild 4685 SHA256 0215b6ff8c9ee7247a3b4fbb48a9c37f9e7c95623d08afb7a50590134fca5e7e SHA512 fea0e8f85e82d0b4af0551465546cd78226126d7dbb2315949309a09854245db798f9054140f2355b687937c308c5365c672ccb3315cad8bd5e09f99b8a89bdf WHIRLPOOL 68ce200e5efbba9fbee4e0fa95f4a479868881655b51f76a2989a8079d2b30ad05a305270cbc862b9b39f259b9854bb8b6e4b66d7c446526e35ceef71b787984
-MISC ChangeLog 23710 SHA256 945062300cf72e901d8b135af2f35ff121b9aa9102b7d7f1a6c7ab7b7b6880cd SHA512 2d0fbb143cf7173c54d0428d54b59958c00afee2762769e0ad6a71dc4ab34b7d98e2e987a2a57ab216169bdf0d3d58753a2fda6ccb158a30023e00f50ac8ac81 WHIRLPOOL 0ec1e02364f8fdbadf7e729155549c7081bc12f65ac399fc8d46ecc70386bbb9f45fd5b5c810882ca7d8f06535a6c1d2c3b441334238ff34c8996cb0f728f258
+EBUILD ccpn-2.3.1_p131018.ebuild 4685 SHA256 b8274f2e758b6e7c3416cb8d424f4c5b5472ecd61ea7b7c59db9194c65e8f26e SHA512 8acb386dff52261169bb0e1f219d14107a8ec28494e61c6263ae71ff968140300a99c74fca495aa75c57cd81e1adfd05ed44f80abcb2d63bfe9a635cff63a35a WHIRLPOOL 39688e03bf1cf9e189c1ad0cf349be0fa6895efffd4afa05f472881dc732f6f3e0ea90e7715b7709be713d20535aa20801a66f6f044894c93d6e1241623dec7a
+MISC ChangeLog 23845 SHA256 0d77883a9490ff67cf5699e704f7d2a38c5517a3e30bef5f3769267021e198ad SHA512 970ebaeeb30d6057bd76c4ccc64f23abfeee4a279fccce14492a5f6aa103b09404b441b86ff814935cac2a985f59d4fc5ada0d9bbf0865c648569a1258812a20 WHIRLPOOL 7f7a740bb80d2882c2338a33b67a1cd25ad6242b598ce0aec562eacabe1a7b95da68a400f0b7d404ec8f478969df7b71ff665681346cbfeb813aab742225ba84
 MISC metadata.xml 234 SHA256 8297e76ecd2cb828f604e9f138b263179eb84beb640215a0f60d7613eb46bb7f SHA512 0e94c0e6570a9267a39968d81c3b80680ccbc6eebb62199e4830b021a114c94a0de17ef2103cef62b7e27da1f51f225a30abb802aff82140ae6dc43366113d31 WHIRLPOOL fa6d4d90b092953b88ed3ad03e1e8c189296d268b39d13a4b4dcb78f0c4456341e3f1b44eea0860054fee43079179cb7cf7a912acf1fbe693ecdca6d9a65f081
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSXRqFAAoJELnU8jG9FVir7e8P/2e5CxdvV7ACbgP8WOmO9WOW
-KSvVeAjx9h6QR1q4Gr3EmmukR2e3f3ySO63OIi9uSqBucKx9R/9NSlwAXAXk7MF+
-aB+3FaGq/aCS2kQCQEZEwIUWhwfHRvZt6QE3TKPPB2GUrpncEpidxzMQlRuP1d9o
-6E1cVXqIB976QMZuFuKRK7BycJ0sSYyrTHoJGEBiUo3hpBhfGeNih0mlMn3TWGSz
-4oHU1kOaR+VJlAW56GnUjdOWW2650cSkaWudjhLrEutLbnhjH+BaWLdvnkV2Wqtl
-JqL9/e4mM2CHNkWtAbKnhf3TxpFngxsqhi1ojZwwiWxaHpLOkM5FZb9XcgOajZ8I
-54iuSN8m7ey2ek1gX5GhwKYIQr24dxLn75OCuGUM3S58hlNluu7Ge/UX2XZuv8Id
-wnhiBmm/S/Hp+yLtJvTL8eAkbrd+kkcvKRlQEX3+1hsmjvk59DB1uLXP8SywFFOa
-Ffry//9CL7ODShdDlgoIeGW/JT9u/wKx1VnTWZFxlxSxaOEDjC4devXwvWzvrYOv
-Oay1VPYjUrUHv9LVHnPOx4UmzleO5RRGQhmpKSe+lBRB80FAQIYs22JWK5DN734a
-vKqVLxZJPG1eyMx6mdjJwEbXXiZObthdXWO1PUPoBKX5GMZsZMDYLQNg/gjFQIo9
-V53CUU4Qzap9EI6C4Q+b
-=zzIA
+iQIcBAEBCgAGBQJSYN5EAAoJELnU8jG9FVir5pYQAKMB3Aq+zwCDbF92mNHHK7yW
+JYcGIXX5xeyNGXWhwDTSdsLzP6iX+q2FTSyHDhRgkhTnMDJdQnp5GsC4QcJC8roz
+QW4CWY3r1P1zCU7Cu0q7gBetlIpbGQ9OOMgWhoNhVQc8/qJlErXcaoF2cEg8Hgd1
+9uOlIVgLUS1rPvh+b/wNxeH7DYMevK6YjrYo+Sn5gbcXIfPvrJNofSlEG+G/gyaw
+P0O5BZuCB/7OETy3E95j3B3sCqEhcygxoOj302CisXHDs0fb8SkbDosaDWEfVMbL
+PXBNwBbh3IWIosPgPr4CmSQ3zvdata0vzNO1g3nkEZjDXKHLnfJ4abfEVdioz7Ko
+wQGhOm91KsCrnz6YJtTGPSJV69N9Hznjx9onEJsjB1JqRGXCdvLo/hWsA3CB+l9F
+nEvL11fjjnLYysWNAtbN9QjzDBVGG2TdKeeUEQoGgBksqUmljJhFWBLeGcbglQ12
+Aiknt4IB8R14v7k0gHg+v1wrsBQTGlH5toUEC8VhGEjKzAmxXSUguhI9ZpxtgBJ3
+K7w/gI89INRUtymN79fje3YkJDK12tDWnLYXT9FOb1u0JxswJxek98aA0KvoC3/v
+IU+N58diTgDX6PRAnEJdWv1OJcUKr6MD7jXQFN9rGuc0gucLIHULpQ+58KFaJjqP
+WN+b04leTqdHJEq06fRN
+=FAhk
 -----END PGP SIGNATURE-----
